# ChatWithGPT

./: CMakeLists.txt  Macros.cmake  buildProject.cmd  dcssd.txt
Source/: main.cpp
